unpackaged/main/default/objects/litify_pm__Question__c/litify_pm__Question__c.object-meta.xml
<CustomObject>
    <label>Question</label>
    <nameField>
        <displayFormat>QST-{YY}{MM}{DD}{0000}</displayFormat>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>