unpackaged/main/default/objects/litify_pm__Question__c/fields/litify_pm__Answer_Options__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Answer_Options__c</fullName>
    <label>Answer Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>