unpackaged/main/default/objects/litify_pm__Question__c/fields/litify_pm__Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Answer_Type__c</fullName>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STRING</fullName>
            </value>
            <value>
                <fullName>INTEGER</fullName>
            </value>
            <value>
                <fullName>SELECT</fullName>
            </value>
            <value>
                <fullName>MULTISELECT</fullName>
            </value>
            <value>
                <fullName>BOOLEAN</fullName>
            </value>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>DATETIME</fullName>
            </value>
            <value>
                <fullName>DECIMAL</fullName>
            </value>
            <value>
                <fullName>LOOKUP</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>PERCENT</fullName>
            </value>
            <value>
                <fullName>TEXTAREA</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>TEXT_ENCRYPTED</fullName>
            </value>
            <value>
                <fullName>CURRENCY</fullName>
            </value>
            <value>
                <fullName>PHONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>