unpackaged/main/default/objects/litify_pm__Question__c/fields/litify_pm__Legacy_Question_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Legacy_Question_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Question Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>