unpackaged/main/default/objects/litify_pm__Question__c/fields/litify_pm__Lookup_Sobject_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Lookup_Sobject_Type__c</fullName>
    <label>Lookup Sobject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>