unpackaged/main/default/objects/litify_pm__Question__c/fields/litify_pm__Question_Label__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Question_Label__c</fullName>
    <label>Question Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>