unpackaged/main/default/objects/litify_pm__Question__c/validationRules/litify_pm__Label_And_AnswerType_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_pm__Label_And_AnswerType_Not_Null</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
            OR(ISBLANK(litify_pm__Question_Label__c),ISNULL(litify_pm__Question_Label__c)),
            ISBLANK(TEXT(litify_pm__Answer_Type__c)))</errorConditionFormula>
    <errorMessage>Question Label or Answer Type cannot be null</errorMessage>
</ValidationRule>